--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "standard": "^17.1.2"
   },
   "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json" 
+    "extends": "./node_modules/standard/eslintrc.json"
+  },
+  "dependencies": {
+    "eslint": "^8.57.1"
   }
 }
